1999-05-26  Linus Nordberg  <linus@swox.se>

	* mpn/generic/rawrandom.c (mpn_rawrandom): Count bits, not limbs,
	to keep track of how many rounds to do in loop.  Clean up
	temporary allocation.  Update `seedsize' inside loop.  Mask off
	the correct number of bits from final result.
 
	* randlc.c (gmp_rand_init_lc): Fix typo (don't call
	mpz_init_set_ui()).

	* mpn/generic/rawrandom.c (mpn_rawrandom): Set SIZ(s->seed) when
	reallocating.

1999-05-25  Linus Nordberg  <linus@swox.se>

	* randcm.c: Remove.
	* randcmui.c: Remove.
	* Makefile.in: Remove randcm and randcmui.
	* make.bat: Ditto.
	* gmp-impl.h: Remove prototypes for __gmp_rand_init_common() and
	__gmp_rand_init_common_ui().
	* randlc.c (gmp_rand_init_lc): Don't call
	__gmp_rand_init_common().

	* randlcui.c (gmp_rand_init_lc_ui): Don't call
	__gmp_rand_init_common_ui().

	* gmp.h (__gmp_rand_state_struct): Remove unused member `maxval'.
	* randclr.c (gmp_rand_clear): Remove reference to s->maxval.
	* randcm.c (__gmp_rand_init_common): Ditto

	* mpn/generic/rawrandom.c (mpn_rawrandom): Don't calculate nlimbs
	twice.

	* gmp.h (__gmp_rand_dist): Remove.

1999-05-24  Linus Nordberg  <linus@swox.se>

	* mpn/generic/rawrandom.c: Clean up comments.

	* gmp.texi: Add documentation for random number generation.

1999-05-21  Linus Nordberg  <linus@swox.se>

	* gmp.h: Typedef `gmp_rand_state' as an array with one element.
	Change prototypes accordingly.
	* gmp-impl.h: Change prototypes using `gmp_rand_state'.
	* rand.c (gmp_rand_init): Take `gmp_rand_state' as argument
	instead of a pointer to a `gmp_rand_state'.
	* mpf/urandom.c (mpf_urandomb): Ditto.
	* mpz/urandom.c (mpz_urandomb): Ditto.
	* mpn/generic/rawrandom.c (mpn_rawrandom): Ditto.
	* randcmui.c (__gmp_rand_init_common_ui): Ditto.
	* randlc.c (gmp_rand_init_lc): Ditto.
	* randlcui.c (gmp_rand_init_lc_ui): Ditto.
	* randui.c (gmp_rand_init_ui): Ditto.
	* randcm.c (__gmp_rand_init_common): Ditto.
	* randclr.c (gmp_rand_clear): Ditto.
