@@ -1,10 +1,13 @@
 1999-05-26  Linus Nordberg  <linus@swox.se>
 
+	* rand.c (gmp_rand_init): Fix typo.
+
 	* mpn/generic/rawrandom.c (mpn_rawrandom): Count bits, not limbs,
 	to keep track of how many rounds to do in loop.  Clean up
 	temporary allocation.  Update `seedsize' inside loop.  Mask off
-	the correct number of bits from final result.
- 
+	the correct number of bits from final result.  Init `mcopyp' even
+	when not normalizing `m'.
+
 	* randlc.c (gmp_rand_init_lc): Fix typo (don't call
 	mpz_init_set_ui()).
 
